<resources>
    <string name="app_name">ProfOrgHelper</string>
    <string name="group_list">Список групы</string>
    <string name="math_queue">Очередь на матпомощь</string>
    <string name="input_form">Форма заполнения</string>
    <string name="notes">Заметки</string>
    <string name="add_student">Добавить студента</string>
    <string name="student_info">Информация о студенте</string>
    <string name="name">ФИО</string>
    <string name="education_form">Форма обучения</string>
    <string name="prof_comm">Состоит в профкоме</string>
    <string name="from_other_city">Иногородний</string>
    <string name="married">Состоит в браке</string>
    <string name="children">Дети</string>
    <string name="family_issues">Семейные обстоятельства</string>
    <string name="add">Добавить</string>
    <string name="input_name">Введите ФИО</string>
    <string name="saved">Данные сохранены</string>
    <string name="student_name">StudentName</string>
    <string name="save">Сохранить</string>
    <string name="note_text">Текст заметки</string>
    <string name="note">Заметка</string>
    <string name="input_note_text">введите текст заметки</string>
    <string name="form_info">Для получения материальной помощи необходимо заполнить бланк. Пожалуйста, ознакомьтесь с образцом бланка.</string>
    <string name="upload">Загрузить</string>
    <string name="delete">Удалить</string>
    <string name="math_form">Бланк матпомощи</string>
    <string name="year">Год</string>
    <string name="month">Месяц</string>
    <string name="math_help">Матпомощь</string>
    <string-array name="education_forms">
        <item>Дневная</item>
        <item>Заочная</item>
    </string-array>
    <string-array name="years">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>
    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="statuses">
        <item>Не в очериде</item>
        <item>В очериде</item>
        <item>Получил</item>
    </string-array>

</resources>
