<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnGroupList"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="@string/group_list" />

            <Button
                android:id="@+id/btnMathQueue"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="@string/math_queue" />
        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnInputForm"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="@string/input_form" />

            <Button
                android:id="@+id/btnNotes"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="@string/notes" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>